--- a/Präsentation/Presentation.html
+++ b/Präsentation/Presentation.html
@@ -433,7 +433,7 @@
 
 		<div class="substep theoremstyle s" style="position:absolute; left:100px; top:500px; width:1100px;">
 			Folgende Rundung von \((\tilde{x}_{Ti})\) zu \((x'_{Ti})\) ist in Pol.-Zeit möglich:
-			<div style="substep position:absolute; top:40px; left:20px; width:500px;">
+			<div class="substep" style="position:absolute; top:40px; left:20px; width:500px;">
 				\(\sum_{i\in M_T} \tilde{x}_{Ti} = 1, \quad \quad \tilde{x}_{Ti} \geq 0,\)<br />
 				\(\sum_{T\in J_i} p_{Ti}\tilde{x}_{Ti} \leq \beta M\)
 			</div>	
