--- a/Präsentation/Presentation.html
+++ b/Präsentation/Presentation.html
@@ -10,10 +10,11 @@
     <meta name="author" content="Lukas Graf" />
 
     <link href="impress-demo.css" rel="stylesheet" />
+    <link href="impress-custom.css" rel="stylesheet" />
     
     <link rel="shortcut icon" href="favicon.png" />
 	
-<!--	<script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script> -->
+	<script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script> 
 	<!-- Falls kein Internet verfügbar... -->
 	<script type="text/javascript" async src="../../../MathJax/MathJax.js?config=TeX-AMS_HTML-full">MathJax.Hub.Config({ 
         "HTML-CSS": { scale: 90, linebreaks: { automatic: true } }})
