--- a/Präsentation/StartPage.html
+++ b/Präsentation/StartPage.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Lukas Graf" />
 
     <link href="impress-demo.css" rel="stylesheet" />
+    <link href="impress-custom.css" rel="stylesheet" />
     
     <link rel="shortcut icon" href="favicon.png" />
 	
