kleinere Anpassungen an der Präsentation

--- a/Präsentation/Presentation.html
+++ b/Präsentation/Presentation.html
@@ -204,12 +204,12 @@
 		
 		<div class="substep" style="position:absolute; top:195px; left:420px;">
 			<img src="Bilder/Pfeil.svg" width="370" style="position:absolute; top:60px; left:0px;" />
-			<div style="position:absolute; top:5px; left:70px; width:190px; height:40px; font-weight:bold; text-align:center; padding:30px 15px;">
+			<div style="position:absolute; top:5px; left:70px; width:190px; height:40px; font-weight:bold; text-align:center; padding:3px 15px 7px; background-color:#000000; border-radius:10px; box-shadow: 2px 2px 2px #868686; color:#FFFFFF;">
 				Tour-Splitting
 			</div>
 		</div>
 		
-		<div class="substep theoremstyletop l" style="position:absolute; top:120px; left:440px; width:360px;">
+		<div class="substep theoremstyletop l" style="position:absolute; top:100px; left:440px; width:360px;">
 			\(\OPT_\CVRP \geq \frac{2}{Q}\sum_{v\in V} q_v \cdot d(s,v)\)
 		</div>	
 		
@@ -296,7 +296,7 @@
 		<img src="Bilder/LevelPrime6.svg" class="substep" width="500" style="position:absolute; left:1000px; top:30px;" />
 		
 		<div class="substep">
-			<img src="Bilder/LevelPrime.svg" width="500" style="position:absolute; left:1000px; top:30px; background-color:white;" />
+			<img src="Bilder/LevelPrime7.svg" width="500" style="position:absolute; left:1000px; top:30px;" />
 			<div class="code" style="position:absolute; left:40px; top:270px;"><span class="numbering">(c)</span>&nbsp;
 				<strong>return</strong> \(\left(H_l\right)_{l\geq 0}\)
 			</div>
@@ -365,11 +365,11 @@
 	</div>
 
 	<div id="Zerlegung-Close2" class="step" data-x="-1000" data-y="-35" data-scale=".5">
-		<div class="substep theoremstyle l" style="position:absolute; left:300px; top:85px; font-size:130%;">
+		<div class="substep theoremstyle l" style="position:absolute; left:300px; top:140px; font-size:130%;">
 			\( (\Tc_l)_{l\geq 0}\) ist \( (6, 40) \)-zuweisbar.
 		</div>
 		
-		<div class="substep theoremstyle d" style="position:absolute; left:300px; top:155px; font-size:130%; width:800px;">
+		<div class="substep theoremstyle d" style="position:absolute; left:300px; top:210px; font-size:130%; width:800px;">
 			\( (\Tc_l)_{l\geq 0}\) ist \( (\alpha, \beta) \)-zuweisbar, falls gilt:
 			<ul>
 				<li>Für alle \(T \in \Tc_l\) gilt: \(d(T) \leq \alpha 2^l M\) <!--<br />
