kleinere Fehler verbessert

--- a/Präsentation/Presentation.html
+++ b/Präsentation/Presentation.html
@@ -453,7 +453,7 @@
 		</div>
 
 		<div class="substep theoremstyle l" style="position:absolute; left:100px; top:430px; font-size:130%;">
-			\( (\Tc_i)_{i\geq 0}\) ist \( (\alpha, \beta) \)-zuweisbar \(\Rightarrow \left(\tau_i\right)\) ist \((4\alpha+2\beta)\)-approximativ
+			\( (\Tc_i)_{i\geq 0}\) ist \( (\alpha, \beta) \)-zuweisbar \(\Rightarrow \left(\tau_i\right)\) ist \((8\alpha+4\beta)\)-approximativ
 		</div>
 		
 	</div>	
@@ -509,7 +509,7 @@
 			</div>		
 		</div>		
 		
-		<div class="nosubstep">
+		<div class="substep">
 			<img src="Bilder/PfeilUp.svg" height="580" style="position:absolute; left:500px; top:-550px;" />
 			<div style="position:absolute; left:440px; top:200px; text-align:center;" />
 				Tour-Splitting<br />(fahrzeugweise)
